--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,13 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
 
+    <!-- Portales -->
+    <div id="modal"></div>
+
+    <!-- Renderizado principal -->
+    <div id="root"></div>
+  
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
